--- a/SDK4/grid/grid-jaas/build.xml
+++ b/SDK4/grid/grid-jaas/build.xml
@@ -3,6 +3,9 @@
 
 	<description>Build script for building the runtime system</description>
 
+	<property name="sdk.home" value="../.." />
+	<property file="${sdk.home}/conf/deploy.properties" />
+		
 	<!--***********************************************************************
 	*** Load the build properties from the file
 	*********************************************************************** -->
@@ -83,6 +86,7 @@
 		<jar destfile="${dist.dir}\${file.output.jaas.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
+				<attribute name="Version" value="${VERSION}"/>
 			</manifest>
 			<include name="**/*"/>
 			<exclude name="gov/nih/nci/system/security/authentication/cagrid/executor/**/*"/>
@@ -94,6 +98,7 @@
 		<jar destfile="${dist.dir}\${file.output.jaas.executor.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
+				<attribute name="Version" value="${VERSION}"/>
 			</manifest>
 			<include name="gov/nih/nci/system/security/authentication/cagrid/executor/**/*"/>
 			<exclude name="gov/nih/nci/system/security/authentication/cagrid/executor/tomcat/*"/>
@@ -106,6 +111,7 @@
 		<jar destfile="${dist.dir}\${file.output.jaas.jndibinder.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
+				<attribute name="Version" value="${VERSION}"/>
 			</manifest>
 			<include name="gov/nih/nci/system/security/authentication/cagrid/executor/tomcat/*"/>
 			<fileset dir="${src.dir}">
