--- a/SDK4/writable-api/build.xml
+++ b/SDK4/writable-api/build.xml
@@ -3,6 +3,9 @@
 
 	<description>Build script for building the runtime system</description>
 
+	<property name="sdk.home" value=".." />
+	<property file="${sdk.home}/conf/deploy.properties" />
+		
 	<!--***********************************************************************
 	*** Load the build properties from the file
 	*********************************************************************** -->
@@ -90,6 +93,7 @@
 		<jar destfile="${dist.dir}\${file.output.client.writable.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
+				<attribute name="Version" value="${VERSION}"/>
 			</manifest>
 			<include name="gov/nih/nci/system/applicationservice/*"/>
 			<include name="gov/nih/nci/system/query/**/*"/>
@@ -102,6 +106,7 @@
 		<jar destfile="${dist.dir}\${file.output.core.writable.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
+				<attribute name="Version" value="${VERSION}"/>
 			</manifest>
 			<include name="gov/nih/nci/system/dao/**/*"/>
 			<include name="gov/nih/nci/system/applicationservice/impl/**/*"/>
