Added "VERSION" property, which is used to generate the "Version" property in SDK produced jar manifest files.
SVN-Revision: 2381

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -26,6 +26,9 @@
 #		2) Web service URL, which uses the Web service name as a suffix 
 #          (i.e., ${SERVER_URL}/services/${WEBSERVICE_NAME})
 #
+#  VERSION: used to create:
+#		1) "Version" property within all SDK produced jar files. 
+#
 ##################################################################################
 PROJECT_NAME=example
 NAMESPACE_PREFIX=gme://caCORE.caCORE/3.2/
