Moved VERSION property from deploy.properties to master build.properties
SVN-Revision: 2383

--- a/SDK4/codegen/build.xml
+++ b/SDK4/codegen/build.xml
@@ -4,7 +4,7 @@
 	<description>Build script for compiling JET Templates</description>
 		
 	<property name="sdk.home" value=".." />
-	<property file="${sdk.home}/conf/deploy.properties" />
+	<property file="${sdk.home}/build.properties" prefix="master" />
 
 	<!--***********************************************************************
 	*** Load the build properties from the file
@@ -96,7 +96,7 @@
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
 				<attribute name="Main-Class" value="gov.nih.nci.codegen.Generator"/>
-				<attribute name="Version" value="${VERSION}"/>
+				<attribute name="Version" value="${master.VERSION}"/>
 			</manifest>
 			<fileset dir="${codegen.core.src.dir}" includes="**/*.java" />
 			<fileset dir="${codegen.templates.src.dir}" includes="**/*.java" />
