--- a/SDK4/system/build.xml
+++ b/SDK4/system/build.xml
@@ -4,7 +4,7 @@
 	<description>Build script for building the runtime system</description>
 		
 	<property name="sdk.home" value=".." />
-	<property file="${sdk.home}/conf/deploy.properties" />
+	<property file="${sdk.home}/build.properties" prefix="master" />
 
 	<!--***********************************************************************
 	*** Load the build properties from the file
@@ -97,7 +97,7 @@
 		<jar destfile="${dist.dir}\${file.output.client.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
-				<attribute name="Version" value="${VERSION}"/>
+				<attribute name="Version" value="${master.VERSION}"/>
 			</manifest>
 			<include name="gov/nih/nci/system/client/**/*"/>
 			<include name="gov/nih/nci/system/applicationservice/*"/>
@@ -114,7 +114,7 @@
 		<jar destfile="${dist.dir}\${file.output.core.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
-				<attribute name="Version" value="${VERSION}"/>
+				<attribute name="Version" value="${master.VERSION}"/>
 			</manifest>
 			<include name="gov/nih/nci/system/dao/**/*"/>
 			<include name="gov/nih/nci/system/applicationservice/impl/**/*"/>
@@ -131,7 +131,7 @@
 		<jar destfile="${dist.dir}\${file.output.web.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
-				<attribute name="Version" value="${VERSION}"/>
+				<attribute name="Version" value="${master.VERSION}"/>
 			</manifest>
 			<include name="gov/nih/nci/system/web/**/*"/>
 			<fileset dir="${src.dir}">
@@ -142,7 +142,7 @@
 		<jar destfile="${dist.dir}\${file.output.ws.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
-				<attribute name="Version" value="${VERSION}"/>
+				<attribute name="Version" value="${master.VERSION}"/>
 			</manifest>
 			<include name="gov/nih/nci/system/webservice/**/*"/>
 			<fileset dir="${src.dir}">
