--- a/SDK4/writable-api/build.xml
+++ b/SDK4/writable-api/build.xml
@@ -4,7 +4,7 @@
 	<description>Build script for building the runtime system</description>
 
 	<property name="sdk.home" value=".." />
-	<property file="${sdk.home}/conf/deploy.properties" />
+	<property file="${sdk.home}/build.properties" prefix="master" />
 		
 	<!--***********************************************************************
 	*** Load the build properties from the file
@@ -93,7 +93,7 @@
 		<jar destfile="${dist.dir}\${file.output.client.writable.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
-				<attribute name="Version" value="${VERSION}"/>
+				<attribute name="Version" value="${master.VERSION}"/>
 			</manifest>
 			<include name="gov/nih/nci/system/applicationservice/*"/>
 			<include name="gov/nih/nci/system/query/**/*"/>
@@ -106,7 +106,7 @@
 		<jar destfile="${dist.dir}\${file.output.core.writable.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
-				<attribute name="Version" value="${VERSION}"/>
+				<attribute name="Version" value="${master.VERSION}"/>
 			</manifest>
 			<include name="gov/nih/nci/system/dao/**/*"/>
 			<include name="gov/nih/nci/system/applicationservice/impl/**/*"/>
