--- a/SDK4/grid/grid-remoting/build.xml
+++ b/SDK4/grid/grid-remoting/build.xml
@@ -4,7 +4,7 @@
 	<description>Build script for building the runtime system</description>
 		
 	<property name="sdk.home" value="../.." />
-	<property file="${sdk.home}/conf/deploy.properties" />
+	<property file="${sdk.home}/build.properties" prefix="master"/>
 
 	<!--***********************************************************************
 	*** Load the build properties from the file
@@ -86,7 +86,7 @@
 		<jar destfile="${dist.dir}\${file.output.remoting.name}" basedir="${build.classes.dir}">
 			<manifest>
 				<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
-				<attribute name="Version" value="${VERSION}"/>
+				<attribute name="Version" value="${master.VERSION}"/>
 			</manifest>
 			<include name="**/*"/>
 			<fileset dir="${src.dir}">
