Changes to support generation of system javadocs
SVN-Revision: 2401

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -6,12 +6,13 @@ security.dir=${system.dir}/security
 grid-remoting.dir=grid/grid-remoting
 grid-jaas.dir=grid/grid-jaas
 
-file.prefix=caCORE_SDK_401
+file.prefix=caCORE_SDK_41
 release.dir=release
 release.binary.file=${release.dir}/${file.prefix}.zip
 release.binary.tar.file=${release.dir}/${file.prefix}.tar
 release.src.file=${release.dir}/${file.prefix}-src.zip
 release.src.tar.file=${release.dir}/${file.prefix}-src.tar
+release.systemdoc.file=${release.dir}/${file.prefix}-systemdocs.zip
 junit.dir=junit
 
 output.dir=output
@@ -54,6 +55,7 @@ build.conf.web-inf.dir=${build.conf.system.web.dir}/WEB-INF
 build.classes.dir=${build.dir}/classes
 build.jar.dir=${build.dir}/jar
 build.doc.dir=${build.dir}/docs
+build.systemdoc.dir=${build.dir}/systemdocs
 
 package.dir=${output.project.dir}/package
 package.client.server.dir=${package.dir}/server
