INCLUDE/EXCLUDE changes  so that only the original model class names are used for matching
SVN-Revision: 2403

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -137,22 +137,33 @@ SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 #  INCLUDE_PACKAGE: specifies the regular expression (java.util.regex) pattern(s) 
 #  of any fully qualified package names within the object/data model that should be 
 #  processed by the code generator. Separate patterns with a comma (',') as a delimiter.
+#  NOTE:  This property applies only to original package names as defined within the
+#  UML Logical Model, and NOT to any GME Namespace package name(s) that may be present 
+#  in the model as Tag Values.
 #
 #  EXCLUDE_PACKAGE: specifies the regular expression (java.util.regex) pattern(s) of  
 #  the fully qualified package name(s) within the object/data model that should be 
 #  ignored (not processed) by the code generator.  Use a comma (',') as a delimiter to 
-#  separate patterns.  Note:  All packages are first filtered/constrained by the 
-#  INCLUDE_PACKAGE property value, and then further filtered by the EXCLUDE_PACKAGE value.
+#  separate patterns.  Note:  All packages are first filtered (constrained) by the 
+#  INCLUDE_PACKAGE property value, and then further filtered by the EXCLUDE_* values.
+#  NOTE:  This property applies only to original package names as defined within the
+#  UML Logical Model, and NOT to any GME Namespace package name(s) that may be present 
+#  in the model as Tag Values.
 #
 #  EXCLUDE_NAME: specifies the regular expression (java.util.regex) pattern(s) of the 
 #  fully qualified class name(s) within the object/data model that should be ignored 
 #  (not processed) by the code generator.  Use a comma (',') as a delimiter to separate 
-#  patterns.
+#  patterns.  NOTE:  This property applies only to original fully qualified class names  
+#  as defined within the UML Logical Model class names, and NOT to any GME Namespace   
+#  class name(s) that may be present in the model as Tag Values.
 #
 #  EXCLUDE_NAMESPACE: specifies the regular expression (java.util.regex) namespace 
 #  pattern of the fully qualified package name(s)  within the object/data model that 
 #  should be ignored (not processed) by the code generator.  Use a comma (',') as a 
-#  delimiter to separate patterns.
+#  delimiter to separate patterns.  NOTE:  Unlike the previous three properties, this 
+#  property applies ONLY to any GME Namespace values that may be present in the model as 
+#  Tag Values.  In this case, the original NAMESPACE_PREFIX property defined within this 
+#  file is effectively "overriden".
 #
 #  NOTE:  As of SDK 4.1, The INCLUDE and EXCLUDE properties above now use java.util.regex 
 #		  patterns.  For details on creating regular expression patterns, see 
@@ -163,7 +174,10 @@ SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 #         to use patterns that take this into account.  As an example, the 
 #         INCLUDE_PACKAGE used to have a default value of 'domain', it has now been 
 #         changed to '.*?domain.*' so that it matches classes found in packages such
-#         as gov.nih.nci.cacoresdk.domain.inheritance.abstrakt.*.
+#         as gov.nih.nci.cacoresdk.domain.inheritance.abstrakt.*.  Note the use
+#         of the '?' symbol before the actual package name; this is necessary
+#         as the '*' symbol is greedy, and would otherwise consume the entire fully
+#         qualified class name, causing the match to fail.
 ##################################################################################
 #MODEL_FILE=sdk.uml
 #MODEL_FILE_TYPE=ARGO
