SDK 4.1 Changes, including Tokenization of DB Connection URL and Password
SVN-Revision: 2405

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -15,15 +15,21 @@ release.src.tar.file=${release.dir}/${file.prefix}-src.tar
 release.systemdoc.file=${release.dir}/${file.prefix}-systemdocs.zip
 junit.dir=junit
 
+db.scripts=database-scripts
+
 output.dir=output
 output.project.dir=${output.dir}/${PROJECT_NAME}
 output.src.dir=${output.project.dir}/src
 output.conf.dir=${output.project.dir}/conf
+output.conf.db.scripts.dir=${output.project.dir}/conf/${db.scripts}
 
 conf.dir=conf
 conf.validator.dir=${conf.dir}/validator
 codegen.config.dir=${conf.dir}/codegen
 codegen.validator.config.dir=${codegen.config.dir}/validator
+
+models.dir=models
+models.db.scripts.dir=${models.dir}/${db.scripts}
 
 system.config.dir=${output.conf.dir}/system
 system.config.client.local.dir=${system.config.dir}/package/local-client
