--- a/SDK4/build.xml
+++ b/SDK4/build.xml
@@ -778,7 +778,11 @@
 				<include name="spring*.*"/>
 				<include name="castor*.*"/>
 				<include name="xercesImpl*.*"/>
+				<include name="caGrid-CQL*.*"/>
 				<include name="cog-jglobus*.*"/>
+				<include name="axis*.*"/>
+				<include name="jaxrpc*.*"/>
+				<include name="commons-discovery*.*"/>
 			</fileset>
 			<fileset dir="${build.jar.dir}" includes="${bean.file}" />
 		</copy>
@@ -820,6 +824,11 @@
 				<include name="ojdbc*.*"/>
 				<include name="spring*.*"/>
 				<include name="cog-jglobus*.*"/>
+				<include name="cog-axis*.*"/>
+				<include name="caGrid*.*"/>
+				<include name="axis*.*"/>
+				<include name="jaxrpc*.*"/>
+				<include name="commons-discovery*.*"/>
 			</fileset>
 			<fileset dir="${build.jar.dir}" includes="${bean.file}" />
 			<fileset dir="${build.jar.dir}" includes="${orm.file}" />
