build script and edit changes
SVN-Revision: 2561

--- a/SDK4/prototype/sdk-generator-4.2/build.properties
+++ b/SDK4/prototype/sdk-generator-4.2/build.properties
@@ -5,5 +5,6 @@ dist.dir=dist
 conf.dir=conf
 src.dir=src
 images.dir=${src.dir}
-generator.jar.file=sdk-generator.jar
+ver=4.2
+generator.jar.file=sdk-generator-${ver}.jar
 VERSION=caCORE SDK Generator 4.2
